[package]
name = "tilt-racer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section", "critical-section-single-core"] }
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
lsm303agr = "0.2.2"
microbit-v2 = "0.13.0"
panic-halt = "0.2.0"
